# sywi_data_plattform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile.dagster  MIGRATION_PLAN.md  README.md  deploy.sh  dev  dev.py  dg.toml  docker-compose.base.yaml  docker-compose.prod.yaml  docker-compose.yml  generate_platform.py  init-db.sh  justfile  package.json  pyproject.toml  workspace.yaml
.dagster/dev-workspace/: dg.toml
_template/: Dockerfile  pyproject.toml
_template/src/__name__/: __init__.py  definitions.py
_template/src/__name__/assets/: __init__.py  example.py
hackernews/: Dockerfile  pyproject.toml
hackernews/src/hackernews/: __init__.py  definitions.py
hackernews/src/hackernews/assets/: __init__.py  analytics.py  ingestion.py
libs/sywi.duckdb/: DESCRIPTION  LICENSE  NAMESPACE
libs/sywi.duckdb/R/: connect.R
libs/sywi_duckdb/: README.md  pyproject.toml
libs/sywi_duckdb/src/sywi_duckdb/: __init__.py  connection.py
patents/: Dockerfile  pyproject.toml
patents/raw_data/: patents_loaded.csv
patents/src/patents/: __init__.py  definitions.py
patents/src/patents/assets/: __init__.py  extraction.py  extraction_utils.py  ingestion.py  knowledge_graph.py  metadata.py
patents/src/patents/resources/: __init__.py  neo4j_resource.py
pipelines/_shared/: __init__.py  ducklake_io_manager.py  ducklake_resource.py
pipelines/_template/: defs.py
pipelines/_template/assets/: hello_world.py
pipelines/hackernews/: Dockerfile  defs.py  pyproject.toml
pipelines/hackernews/repo/: defs.py
pipelines/hackernews/repo/assets/: __init__.py  export_csv.py  ingestion.py  storage.py
pipelines/lotto/: Dockerfile  pyproject.toml
pipelines/patents/: Dockerfile  defs.py  pyproject.toml
pipelines/patents/assets/: extraction.py  extraction_utils.py  ingestion.py  knowledge_graph.py  metadata.py
pipelines/patents/resources/: __init__.py  falkordb_resource.py
src/dev/: __init__.py  cli.py
sywi-core/: pyproject.toml
sywi-core/src/sywi_core/: ducklake_resource.py
sywi-core/sywi_core/: __init__.py  ducklake_io_manager.py
