[project]
name = "sywi-data-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Minimal dependencies for dev CLI utility commands
    "dagster",
    "dagster-webserver",
    "dagster-postgres",
    "dagster-dg-cli",
    "click>=8,<8.2",
    "duckdb",
    "pyyaml>=6.0.3",
    "typer>=0.9.0",
    "python-dotenv",
]

[project.scripts]
dev = "dev.cli:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dev"

[tool.uv]
package = true

[dependency-groups]
dev = []
