[project]
name = "__name__"
version = "0.1.0"
description = "__NAME__ pipeline for SYWI platform"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-postgres",
    "pandas",
    "duckdb",
    "sywi-core",
]

[tool.uv.sources]
sywi-core = { path = "../sywi-core", editable = true }

[project.optional-dependencies]
dev = ["dagster-webserver"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/__name__"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "__name__"
code_location_target_module = "__name__.definitions"
