[project]
name = "__name__"
version = "0.1.0"
description = "__NAME__ project for SYWI platform"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-postgres",
    "pandas",
    "duckdb",
    "sywi-core",
]

[tool.uv.sources]
sywi-core = { path = "../sywi-core", editable = true }

[project.optional-dependencies]
dev = ["dagster-webserver"]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "__name__"
code_location_target_module = "__name__.definitions"
