[project]
name = "hackernews"
version = "0.1.0"
description = "HackerNews data pipeline for SYWI platform"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-postgres",
    "pandas",
    "requests",
    "duckdb",
    "sywi-core",
]

[tool.uv.sources]
sywi-core = { path = "../sywi-core", editable = true }

[project.optional-dependencies]
dev = ["dagster-webserver"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hackernews"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hackernews"
code_location_target_module = "hackernews.definitions"
