[project]
name = "hackernews"
version = "0.1.0"
description = "HackerNews data project for SYWI platform"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-postgres",
    "pandas",
    "requests",
    "duckdb",
    "sywi-core",
]

[tool.uv.sources]
sywi-core = { path = "../sywi-core", editable = true }

[project.optional-dependencies]
dev = ["dagster-webserver"]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hackernews"
code_location_target_module = "hackernews.definitions"
