[project]
name = "sywi-core"
version = "0.1.0"
description = "Shared DuckLake utilities for SYWI data platform"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-postgres",
    "duckdb",
    "pandas",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sywi_core"]
