[project]
name = "sywi-core"
version = "0.1.0"
description = "Shared DuckLake utilities for SYWI data platform"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-postgres",
    "duckdb",
    "pandas",
    "pydantic",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
