[project]
name = "patents-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-postgres",
    "pandas",
    "duckdb",
    # BigQuery
    "google-cloud-bigquery",
    "db-dtypes",
    # LLM/Embeddings
    "dspy",
    "openai",
    # Graph databases
    "falkordb",
    "neo4j",
    # Data processing
    "numpy",
    # Visualization
    "matplotlib",
    # HTTP requests (for metadata fetching)
    "requests",
]

[tool.uv]
dev-dependencies = []
